[#8] updata renovate.json

--- a/renovate.json
+++ b/renovate.json
@@ -1,118 +1,142 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "regexManagers": [
+  "customManagers": [
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+TYPESCRIPT_NODE_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
       "depNameTemplate": "mcr.microsoft.com/devcontainers/typescript-node",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://mcr.microsoft.com"]
+      "versioningTemplate": "docker"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_GOLANG_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
       "depNameTemplate": "golang",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://registry-1.docker.io"]
+      "versioningTemplate": "docker"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_JQ_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
-      "depNameTemplate": "jqlang/jq",
+      "depNameTemplate": "ghcr.io/jqlang/jq",
       "versioningTemplate": "docker",
-      "registryUrls": ["https://ghcr.io"]
+      "registryUrls": ["https://"]
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+DOCKER_GOLANGCI_LINT_VERSION=(?<currentValue>\\S+)"
       ],
       "datasourceTemplate": "docker",
       "depNameTemplate": "golangci/golangci-lint",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://registry-1.docker.io"]
+      "versioningTemplate": "docker"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_SQLC_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
       "depNameTemplate": "sqlc/sqlc",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://registry-1.docker.io"]
+      "versioningTemplate": "docker"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+DOCKER_GOLANG_MIGRATE_VERSION=(?<currentValue>\\S+)"
       ],
       "datasourceTemplate": "docker",
       "depNameTemplate": "migrate/migrate",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://registry-1.docker.io"]
+      "versioningTemplate": "docker"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_DIVE_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
       "depNameTemplate": "wagoodman/dive",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://registry-1.docker.io"]
+      "versioningTemplate": "docker"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DOCKERFMT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "github.com/reteps/dockerfmt",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DELVE_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "github.com/go-delve/delve/cmd/dlv",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_OAPI_CODEGEN_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_OGEN_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "github.com/ogen-go/ogen/cmd/ogen",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_SHFMT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "mvdan.cc/sh/v3/cmd/shfmt",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_MKCERT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "filippo.io/mkcert",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DEPENDABOT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
       "packageNameTemplate": "github.com/dependabot/cli/cmd/dependabot",
       "versioningTemplate": "semver-coerced"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+NPM_OPENAPI_GENERATOR_CLI_VERSION=(?<currentValue>\\S+)"
       ],
@@ -121,7 +145,9 @@
       "versioningTemplate": "npm"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+NPM_IBM_OPENAPI_VALIDATOR_VERSION=(?<currentValue>\\S+)"
       ],
@@ -130,14 +156,18 @@
       "versioningTemplate": "npm"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+NPM_REDOCLY_CLI_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "npm",
       "depNameTemplate": "@redocly/cli",
       "versioningTemplate": "npm"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+NPM_SQL_FORMATTER_VERSION=(?<currentValue>\\S+)"
       ],
@@ -146,14 +176,18 @@
       "versioningTemplate": "npm"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+NPM_PRETTIER_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "npm",
       "depNameTemplate": "prettier",
       "versioningTemplate": "npm"
     },
     {
-      "fileMatch": ["^\\.devcontainer/Dockerfile$"],
+      "customType": "regex",
+      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+PIPX_GITINGEST_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "pypi",
       "depNameTemplate": "gitingest",
