removate.json 修正もれ #8 #9

--- a/renovate.json
+++ b/renovate.json
@@ -27,8 +27,7 @@
       "matchStrings": ["ARG\\s+DOCKER_JQ_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
       "depNameTemplate": "ghcr.io/jqlang/jq",
-      "versioningTemplate": "docker",
-      "registryUrls": ["https://"]
+      "versioningTemplate": "docker"
     },
     {
       "customType": "regex",
