--- a/renovate.json
+++ b/renovate.json
@@ -1,11 +1,10 @@
 {
   "$schema": "https://docs.renovatebot.com/renovate-schema.json",
   "extends": ["config:recommended"],
-  "enabledManagers": ["docker", "golang", "custom"],
   "customManagers": [
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+TYPESCRIPT_NODE_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
@@ -14,7 +13,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_GOLANG_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
@@ -23,7 +22,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_JQ_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
@@ -32,7 +31,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+DOCKER_GOLANGCI_LINT_VERSION=(?<currentValue>\\S+)"
@@ -43,7 +42,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_SQLC_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
@@ -52,7 +51,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+DOCKER_GOLANG_MIGRATE_VERSION=(?<currentValue>\\S+)"
@@ -63,7 +62,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+DOCKER_DIVE_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "docker",
@@ -72,7 +71,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DOCKERFMT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -81,7 +80,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DELVE_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -90,7 +89,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_OAPI_CODEGEN_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -99,7 +98,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_OGEN_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -108,7 +107,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_SHFMT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -117,7 +116,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_MKCERT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -126,7 +125,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DEPENDABOT_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "gomod",
@@ -135,7 +134,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+NPM_OPENAPI_GENERATOR_CLI_VERSION=(?<currentValue>\\S+)"
@@ -146,7 +145,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+NPM_IBM_OPENAPI_VALIDATOR_VERSION=(?<currentValue>\\S+)"
@@ -157,7 +156,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+NPM_REDOCLY_CLI_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "npm",
@@ -166,7 +165,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": [
         "ARG\\s+NPM_SQL_FORMATTER_VERSION=(?<currentValue>\\S+)"
@@ -177,7 +176,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+NPM_PRETTIER_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "npm",
@@ -186,7 +185,7 @@
     },
     {
       "customType": "regex",
-      "managerFilePatterns": ["^\\.devcontainer/Dockerfile$"],
+      "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+PIPX_GITINGEST_VERSION=(?<currentValue>\\S+)"],
       "datasourceTemplate": "pypi",
