--- a/renovate.json
+++ b/renovate.json
@@ -74,7 +74,7 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DOCKERFMT_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
+      "datasourceTemplate": "go",
       "packageNameTemplate": "github.com/reteps/dockerfmt",
       "versioningTemplate": "semver-coerced"
     },
@@ -83,8 +83,8 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DELVE_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
-      "packageNameTemplate": "github.com/go-delve/delve/cmd/dlv",
+      "datasourceTemplate": "go",
+      "packageNameTemplate": "github.com/go-delve/delve",
       "versioningTemplate": "semver-coerced"
     },
     {
@@ -92,8 +92,8 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_OAPI_CODEGEN_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
-      "packageNameTemplate": "github.com/oapi-codegen/oapi-codegen/v2/cmd/oapi-codegen",
+      "datasourceTemplate": "go",
+      "packageNameTemplate": "github.com/oapi-codegen/oapi-codegen/v2",
       "versioningTemplate": "semver-coerced"
     },
     {
@@ -101,8 +101,8 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_OGEN_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
-      "packageNameTemplate": "github.com/ogen-go/ogen/cmd/ogen",
+      "datasourceTemplate": "go",
+      "packageNameTemplate": "github.com/ogen-go/ogen",
       "versioningTemplate": "semver-coerced"
     },
     {
@@ -110,8 +110,8 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_SHFMT_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
-      "packageNameTemplate": "mvdan.cc/sh/v3/cmd/shfmt",
+      "datasourceTemplate": "go",
+      "packageNameTemplate": "mvdan.cc/sh/v3",
       "versioningTemplate": "semver-coerced"
     },
     {
@@ -119,7 +119,7 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_MKCERT_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
+      "datasourceTemplate": "go",
       "packageNameTemplate": "filippo.io/mkcert",
       "versioningTemplate": "semver-coerced"
     },
@@ -128,8 +128,8 @@
       "managerFilePatterns": ["^.devcontainer/Dockerfile$"],
       "matchStringsStrategy": "recursive",
       "matchStrings": ["ARG\\s+GO_DEPENDABOT_VERSION=(?<currentValue>\\S+)"],
-      "datasourceTemplate": "gomod",
-      "packageNameTemplate": "github.com/dependabot/cli/cmd/dependabot",
+      "datasourceTemplate": "go",
+      "packageNameTemplate": "github.com/dependabot",
       "versioningTemplate": "semver-coerced"
     },
     {
