--- a/.github/ISSUE_TEMPLATE/bug_report.yaml
+++ b/.github/ISSUE_TEMPLATE/bug_report.yaml
@@ -6,7 +6,7 @@ body:
   - type: markdown
     attributes:
       value: |
-        ありがとうございます！ 以下のフォームにご記入ください。
+        ありがとうございます！ 以下のフォームにご記入ください
   - type: textarea
     id: summary
     attributes:
