--- a/openapi/specs/users.yaml
+++ b/openapi/specs/users.yaml
@@ -87,6 +87,18 @@ paths:
                   - name: name
                     reason: must not be empty
                 trace_id: 123e4567-e89b-12d3-a456-426614174000
+        '413':
+          description: Content too large
+          content:
+            application/json:
+              schema:
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
+              example:
+                type: https://example.com/problems/request-too-large
+                title: Your request body is too large.
+                status: 413
+                detail: Content Too Large
+                error_code: CONTENT_TOO_LARGE
         '500':
           description: Internal server error
           content:
@@ -200,6 +212,18 @@ paths:
                   - name: name
                     reason: must not be empty
                 trace_id: 123e4567-e89b-12d3-a456-426614174000
+        '413':
+          description: Content too large
+          content:
+            application/json:
+              schema:
+                $ref: 'problem_details.yaml#/components/schemas/ProblemDetails'
+              example:
+                type: https://example.com/problems/request-too-large
+                title: Your request body is too large.
+                status: 413
+                detail: Content Too Large
+                error_code: CONTENT_TOO_LARGE
         '404':
           description: User not found
           content:
